[package]
name = "MemEdit"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.59.0", features = ["Win32_Foundation", "Win32_System_Memory", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging"] }
lazy_static = "1.5.0"
winapi = { version = "0.3.9", features = ["memoryapi"] }
